<!--
Universidad Nacional
Paradigmas de programación

Dr. Carlos Loría Sáenz

Estudiantes:
Fabián González Méndez - 402440037
Raquel Bermúdez Ureña  - 117580418
Kevin Salas Hernández  - 116680114

Last edit: Oct,2020
Comments: configura el proyecto maven.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.eif400.sprint1</groupId>
  <artifactId>Sprint-1</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Sprint-1</name>
  <url>http://maven.apache.org</url>

  <build>

    <!-- Excludes resources -->
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <excludes>
          <exclude>**/*.properties</exclude>
        </excludes>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <!-- Using enable preview compile -->
        <configuration>
          <release>14</release>
          <compilerArgs>
            --enable-preview
          </compilerArgs>

          <!-- Excludes dsrc (dynamic sources) -->
          <excludes>
            <exclude>**/com/eif400/sprint1/dsrc/*.java</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2.1</version>
        <executions>
          <execution>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <mainClass>com.eif400.sprint1.SimpleRouter</mainClass>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>

    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.21</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.nanohttpd/nanohttpd -->
    <dependency>
      <groupId>org.nanohttpd</groupId>
      <artifactId>nanohttpd</artifactId>
      <version>2.3.1</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.nanohttpd/nanohttpd-nanolets -->
    <dependency>
      <groupId>org.nanohttpd</groupId>
      <artifactId>nanohttpd-nanolets</artifactId>
      <version>2.3.1</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.nanohttpd/nanohttpd-webserver -->
    <dependency>
      <groupId>org.nanohttpd</groupId>
      <artifactId>nanohttpd-webserver</artifactId>
      <version>2.3.1</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.nanohttpd/nanohttpd-websocket -->
    <dependency>
      <groupId>org.nanohttpd</groupId>
      <artifactId>nanohttpd-websocket</artifactId>
      <version>2.3.1</version>
    </dependency>

  </dependencies>

</project>
